--- a/projects/03-CSS/style.css
+++ b/projects/03-CSS/style.css
@@ -1,20 +1,26 @@
 /*  */
 /*  */
 
-/* * {
-  margin: 0;
-  padding: 0;
-} */
+* {
+  /* margin: 0;
+  padding: 0; */
+  /* border-top: 10px solid #1098ad; */
+}
 
-h1,
+body {
+  color: #444;
+  font-family: sans-serif;
+
+  border-top: 10px solid #1098ad;
+}
+
+/* h1,
 h2,
 h3,
 h4,
 p,
 li {
-  font-family: sans-serif;
-  color: #444;
-}
+} */
 
 h1,
 h2,
@@ -125,4 +131,28 @@ a:hover {
 a:active {
   background-color: black;
   font-style: italic;
+}
+
+/* #copyright {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green;
+} */
+
+/* nav a:link {
+  font-size: 18px;
+} */
+
+nav {
+  font-size: 18px;
 }
