--- a/projects/03-CSS/style.css
+++ b/projects/03-CSS/style.css
@@ -2,25 +2,48 @@
 /*  */
 
 * {
-  /* margin: 0;
-  padding: 0; */
-  /* border-top: 10px solid #1098ad; */
+  margin: 0;
+  padding: 0;
+  /* box-sizing: border-box; */
 }
 
 body {
   color: #444;
   font-family: sans-serif;
-
   border-top: 10px solid #1098ad;
 }
 
-/* h1,
-h2,
-h3,
-h4,
-p,
-li {
-} */
+.container {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+  padding: 20px 40px;
+  margin-bottom: 60px;
+}
+
+nav {
+  font-size: 18px;
+}
+
+article {
+  margin-bottom: 60px;
+}
+
+.post-header {
+  /* width: 50%; */
+  margin-bottom: 40px;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  padding: 50px 0;
+  width: 500px;
+}
 
 h1,
 h2,
@@ -36,10 +59,14 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  /* background-color: red; */
 }
 
 h4 {
@@ -51,19 +78,24 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
   font-size: 20px;
+  margin-bottom: 10px;
+  /* display: inline; */
 }
 
-/* footer p {
-  font-size: 16px;
-} */
-
-/* article header p {
-  font-style: italic;
-} */
+li:last-child {
+  margin-bottom: 0;
+}
 
 #author {
   font-style: italic;
@@ -72,6 +104,7 @@ li {
 
 #copyright {
   font-size: 16px;
+  margin-top: 25px;
 }
 
 .related-author {
@@ -83,20 +116,6 @@ li {
   list-style-type: none;
 }
 
-.main-header {
-  background-color: #f7f7f7;
-}
-
-aside {
-  background-color: #f7f7f7;
-  border-top: 5px solid #1098ad;
-  border-bottom: 5px solid #1098ad;
-}
-
-/* .first-li {
-  font-weight: bold;
-} */
-
 li:first-child {
   font-weight: bold;
 }
@@ -104,14 +123,6 @@ li:first-child {
 li:last-child {
   font-style: italic;
 }
-
-/* li:nth-child(even) {
-  color: red;
-} */
-
-/* article p:first-child {
-  color: red;
-} */
 
 a:link {
   color: #1098ad;
@@ -133,26 +144,21 @@ a:active {
   font-style: italic;
 }
 
-/* #copyright {
-  color: red;
+.post-img {
+  width: 100%;
+  height: auto;
 }
 
-.copyright {
-  color: blue;
+nav a:link {
+  /* background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+  display: block; */
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
 }
 
-.text {
-  color: yellow;
-}
-
-footer p {
-  color: green;
-} */
-
-/* nav a:link {
-  font-size: 18px;
-} */
-
-nav {
-  font-size: 18px;
+nav a:link:last-child {
+  margin-right: 0;
 }
