--- a/projects/04-CSS-Layouts/style.css
+++ b/projects/04-CSS-Layouts/style.css
@@ -4,12 +4,12 @@
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
 }
 
 body {
   color: #444;
   font-family: sans-serif;
+
   border-top: 10px solid #1098ad;
   position: relative;
 }
@@ -21,13 +21,13 @@ body {
 
 .main-header {
   background-color: #f7f7f7;
+  /* background-color: red; */
   padding: 20px 40px;
   margin-bottom: 60px;
 }
 
 nav {
   font-size: 18px;
-  text-align: center;
 }
 
 article {
@@ -36,13 +36,13 @@ article {
 
 .post-header {
   margin-bottom: 40px;
-  /* position: relative; */
 }
 
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
+
   padding: 50px 0;
   width: 500px;
 }
@@ -68,7 +68,6 @@ h3 {
   font-size: 30px;
   margin-bottom: 20px;
   margin-top: 40px;
-  /* background-color: red; */
 }
 
 h4 {
@@ -105,7 +104,6 @@ li:last-child {
 
 #copyright {
   font-size: 16px;
-  margin-top: 25px;
 }
 
 .related-author {
@@ -114,7 +112,7 @@ li:last-child {
 }
 
 .related {
-  list-style-type: none;
+  list-style: none;
 }
 
 li:first-child {
@@ -123,6 +121,10 @@ li:first-child {
 
 li:last-child {
   font-style: italic;
+}
+
+article p:first-child {
+  color: red;
 }
 
 a:link {
@@ -137,7 +139,7 @@ a:visited {
 a:hover {
   color: orangered;
   font-weight: bold;
-  text-decoration: underline;
+  text-decoration: underline orangered;
 }
 
 a:active {
@@ -161,11 +163,12 @@ nav a:link:last-child {
 }
 
 button {
-  cursor: pointer;
-  padding: 20px;
   font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
 
   position: absolute;
+
   bottom: 50px;
   right: 50px;
 }
@@ -179,15 +182,44 @@ h2 {
   position: relative;
 }
 
-h2::after {
+h2::before {
   content: 'TOP';
   background-color: #ffe70e;
+  color: #444;
   font-size: 16px;
   font-weight: bold;
-  color: #000;
   display: inline-block;
   padding: 5px 10px;
   position: absolute;
+  top: -10px;
   right: -25px;
-  top: -15px;
+}
+
+.author-img {
+  float: left;
+  margin-bottom: 20px;
+}
+
+.author {
+  margin-top: 10px;
+  float: left;
+  margin-left: 20px;
+}
+
+h1 {
+  float: left;
+}
+
+nav {
+  float: right;
+}
+
+.clear {
+  clear: both;
+}
+
+.clearfix::after {
+  clear: both;
+  content: '';
+  display: block;
 }
