--- a/projects/04-CSS-Layouts/style.css
+++ b/projects/04-CSS-Layouts/style.css
@@ -23,7 +23,7 @@ body {
 .main-header {
   background-color: #f7f7f7;
   padding: 20px 40px;
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 nav {
@@ -31,7 +31,7 @@ nav {
 }
 
 article {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .post-header {
@@ -279,7 +279,7 @@ footer {
   font-style: italic;
 }
 
-.row {
+/* .row {
   display: flex;
   align-items: flex-start;
   gap: 75px;
@@ -293,4 +293,27 @@ article {
 
 aside {
   flex: 0 0 300px;
+} */
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  column-gap: 75px;
+  row-gap: 60px;
+  align-items: start;
+}
+
+.main-header {
+  grid-column: 1 / span 2;
+  margin-bottom: 0;
+}
+
+article {
+}
+
+aside {
+}
+
+footer {
+  grid-column: 1 / -1;
 }
